--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="src\ClientServerShared.cpp" />
     <ClCompile Include="src\CollisionComponent.cpp" />
     <ClCompile Include="src\CollisionSystem.cpp" />
+    <ClCompile Include="src\EndingDirector.cpp" />
     <ClCompile Include="src\ErrorState.cpp" />
     <ClCompile Include="src\FruitSystem.cpp" />
     <ClCompile Include="src\FXDirector.cpp" />
@@ -172,6 +173,8 @@
     <ClInclude Include="src\ClientServerShared.hpp" />
     <ClInclude Include="src\CollisionSystem.hpp" />
     <ClInclude Include="src\CommandIDs.hpp" />
+    <ClInclude Include="src\EndingDirector.hpp" />
+    <ClInclude Include="src\EndingMessages.hpp" />
     <ClInclude Include="src\ErrorState.hpp" />
     <ClInclude Include="src\FruitSystem.hpp" />
     <ClInclude Include="src\FXDirector.hpp" />
