add class for crate system refactor server ready for crate spawning

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="src\ClientServerShared.cpp" />
     <ClCompile Include="src\CollisionComponent.cpp" />
     <ClCompile Include="src\CollisionSystem.cpp" />
+    <ClCompile Include="src\CrateSystem.cpp" />
     <ClCompile Include="src\EndingDirector.cpp" />
     <ClCompile Include="src\ErrorState.cpp" />
     <ClCompile Include="src\FruitSystem.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="src\ClientServerShared.hpp" />
     <ClInclude Include="src\CollisionSystem.hpp" />
     <ClInclude Include="src\CommandIDs.hpp" />
+    <ClInclude Include="src\CrateSystem.hpp" />
     <ClInclude Include="src\EndingDirector.hpp" />
     <ClInclude Include="src\EndingMessages.hpp" />
     <ClInclude Include="src\ErrorState.hpp" />
