add option for localisation strings made pause menu default to resume instead of quit made whirlybobs no longer break crates when colliding fix scaling problem with balldock direction whirlybobs are nonw killed by crate explosions goobly now killed by crate explosion fix awarding regular hat wearer points

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="src\KeyMapDirector.hpp" />
     <ClInclude Include="src\KeyMapping.hpp" />
     <ClInclude Include="src\LoadingScreen.hpp" />
+    <ClInclude Include="src\Localisation.hpp" />
     <ClInclude Include="src\MapAnimator.hpp" />
     <ClInclude Include="src\MapData.hpp" />
     <ClInclude Include="src\MenuCallbacks.hpp" />
