--- a/Demo/Demo.vcxproj.filters
+++ b/Demo/Demo.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="src\CrateSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\LuggageDirector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.hpp">
@@ -297,6 +300,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Localisation.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LuggageDirector.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
