update dedicated server build on linux

--- a/ServerTest/src/CMakeLists.txt
+++ b/ServerTest/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set(PROJECT_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/FruitSystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/HatSystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/InventoryDirector.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/LuggageDirector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/NPCSystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/PlayerSystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/PowerupSystem.cpp
