update cmake files and build on linux

--- a/ServerTest/CMakeLists.txt
+++ b/ServerTest/CMakeLists.txt
@@ -32,7 +32,7 @@ find_package(XYGINEXT REQUIRED)
 find_package(TMXLITE REQUIRED)
 
 # X11 is required on unices
-if(UNIX)
+if(UNIX AND NOT APPLE)
   find_package(X11 REQUIRED)
 endif()
 
