--- a/xyginext/xyginext.vcxproj.filters
+++ b/xyginext/xyginext.vcxproj.filters
@@ -186,9 +186,6 @@
     <ClCompile Include="src\imgui\imgui_draw.cpp">
       <Filter>Source Files\imgui</Filter>
     </ClCompile>
-    <ClCompile Include="src\imgui\imgui_sfml.cpp">
-      <Filter>Source Files\imgui</Filter>
-    </ClCompile>
     <ClCompile Include="src\ecs\systems\CallbackSystem.cpp">
       <Filter>Source Files\ecs\systems</Filter>
     </ClCompile>
@@ -287,6 +284,12 @@
     </ClCompile>
     <ClCompile Include="src\core\dialogues\nfd\nfd_win.cpp">
       <Filter>Source Files\core\dialogues\nfd</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui_tabs.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui-SFML.cpp">
+      <Filter>Source Files\imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
