--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -71,6 +71,7 @@ set(PROJECT_SRC ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/network/NetEvent.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/network/NetHost.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/network/NetPeer.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/network/EnetClientImpl.cpp
 
   ${CMAKE_CURRENT_SOURCE_DIR}/resources/FontResource.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/resources/ShaderResource.cpp
