Fix up the installed bundle, not the original build output

--- a/Demo/CMakeLists.txt
+++ b/Demo/CMakeLists.txt
@@ -95,8 +95,8 @@ endif()
 if(APPLE AND MACOS_BUNDLE)
 	#set(CPACK_PACKAGE_FILE_NAME ${PROJECT_NAME})
     install(CODE " include(BundleUtilities)
-		 fixup_bundle(${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}.app \"\" \"\")
-		 verify_app(${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}.app)")
+		 fixup_bundle(${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}.app \"\" \"\")
+		 verify_app(${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}.app)")
     SET(CPACK_GENERATOR "DragNDrop")
 endif()
 
