Add EditorSystem, along with other bits and bobs

--- a/xyginext/CMakeLists.txt
+++ b/xyginext/CMakeLists.txt
@@ -41,10 +41,9 @@ find_package(OpenGL REQUIRED)
 find_package(ENet REQUIRED)
 
 # Additional include directories
-include_directories(
+include_directories( SYSTEM
   ${SFML_INCLUDE_DIR} 
-  ${ENET_INCLUDE_DIR}
-  ${CMAKE_SOURCE_DIR}/include)
+  ${ENET_INCLUDE_DIR})
   
 if(UNIX)
   include_directories(${GTK_INCLUDE_DIRS})
@@ -88,7 +87,7 @@ endif()
 # Add editor definition if requested
 if (ENABLE_EDITOR)
   add_definitions(-DXY_EDITOR)
-endif();
+endif()
 
 # Create the library
 add_library(${PROJECT_NAME} ${PROJECT_SRC} ${NFD_SRC})
